Fix: allow full event duration display in week/day biew on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,7 +87,7 @@
     font-size: 14px !important;
   }
 
-  .fc-event {
+  .fc-daygrid-event {
     margin-top: 1px !important;
     margin-bottom: 1px !important;
     padding: 2px 3px !important;
@@ -95,6 +95,11 @@
     border-radius: 3px !important;
     max-height: 20px !important;
     overflow: hidden !important;
+  }
+
+  .fc-timegrid-event {
+    padding: 2px 3px !important;
+    font-size: 11px !important;
   }
 
   .fc-event-title {
